--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,8 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="program.html" class="nav-link">Program</a></li>
+	          						<li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
+<li class="nav-item"><a href="program.html" class="nav-link">Program</a></li>
 	          <li class="nav-item"><a href="coaches.html" class="nav-link">Coaches</a></li>
 	          <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
