--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
 
             <div class="col-sm-6 ftco-animate text-center">
-              <h1 class="mb-4">Fuel Your Body Fitness</h1>
-              <h2 class="subheading">Be One Of Us</h2>
+              <h1 class="mb-4">CloudFit</h1>
+              <h2 class="subheading">Make tomorrow, today</h2>
             </div>
 
           </div>
