--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-						<li class="nav-item"><a href="t.html" class="nav-link">Login</a></li>
+						<li class="nav-item"><a href="loginLucas.html" class="nav-link">Login</a></li>
 	          <li class="nav-item"><a href="program.html" class="nav-link">Program</a></li>
 	          <li class="nav-item"><a href="coaches.html" class="nav-link">Coaches</a></li>
 	          <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
