--- a/loginLucas.html
+++ b/loginLucas.html
@@ -67,9 +67,10 @@
 
 
 
-					<div class="col-md-3"></div>
-          <div class="col-md-6 ftco-animate">
-            <form action="#" style = "background-color:white; padding:5%;"class="contact-form">
+					<div class="col-md-4"></div>
+          <div class="col-md-4 ftco-animate">
+            <form action="#" style = "background-color:white; padding:5%; display:flex; justify-content: center; flex-direction: column;   align-items: center;
+"class="contact-form">
 
             	
             		<div class="col-md-6">
@@ -85,14 +86,15 @@
 	                </div>
 	                </div>
 
+              <div class = "row" style = "display: flex; flex-direction: column;">
               <div class="form-group" style = "margin-left: 2%">
                 <input type="submit" value="Login" class="btn btn-primary py-3 px-5">
               </div>
 
-              <div class="form-group" style = "margin-left: 2%">
-                <input type="submit" value="Forgot Password?" class="btn btn-primary py-1 px-3">
-              </div>
+              <span class="psw"><a href="#">Forgot your password?</a></span>
+              <span class="psw"><a href="#">Create New Account</a></span>
 
+            </div>
             </form>
           </div>
         </div>
