--- a/index.html
+++ b/index.html
@@ -174,12 +174,10 @@
 
     <section class="ftco-about d-md-flex bg-light">
     	<div class="one-half img" style="background-image: url(images/about-2.jpg);">
-    		<a href="https://vimeo.com/45830194" class="icon popup-vimeo d-flex justify-content-center align-items-center">
-      		<span class="icon-play"></a>
-      	</a>
+    	
     	</div>
-    	<div class="one-half ftco-animate">
-        <div class="heading-section ftco-animate ">
+    	<div class="one-half ftco-animate" >
+        <div class="heading-section ftco-animate " style="display:flex; flex-direction: column; align-items: center;">
         	<h3 class="subheading">About CloudFit</h3>
           <h2 class="mb-5">Welcome <br>To Our Gym</h2>
         </div>
