--- a/program.html
+++ b/program.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    	<link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
 
@@ -44,6 +44,8 @@
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Journal</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
+	      </div>
+	      </div>
 	      </div>
 		  </div>
 	  </nav>
