--- a/login.html
+++ b/login.html
@@ -50,13 +50,8 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          						<li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
-<li class="nav-item"><a href="program.html" class="nav-link">Program</a></li>
-	          <li class="nav-item"><a href="coaches.html" class="nav-link">Coaches</a></li>
-	          <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Journal</a></li>
-	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item active"><a href="login.html" class="nav-link">Login</a></li>
+
 	        </ul>
 	      </div>
 		  </div>
@@ -92,7 +87,7 @@
               </div>
 
               <span class="psw"><a href="#" >Forgot your password?</a></span>
-              <span class="psw"><a href="#" data-toggle="modal" data-target="#exampleModal">Create New Account</a></span>
+              <span class="psw"><a href="create_user.html" >Create New Account</a></span>
 
             </div>
             </form>
