--- a/athlete_info.html
+++ b/athlete_info.html
@@ -33,16 +33,17 @@
                 </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
-
+                    <li class="nav-item active"><a href="athlete_info.html" class="nav-link">Info</a></li>
+                    <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
+                    <li class="nav-item"><a href="atlete_plan.html" class="nav-link">Workout Plan</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- END nav -->
 
-    <section class="hero-wrap js-fullheight" style="background-image: url('images/bg_2.jpg');">
+    <section class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
@@ -62,23 +63,17 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <div class="row">
+                    <div class="row" style="display:flex; justify-content:center; align-items:center;">
                         <div class="col-md-6 col-lg-3 d-flex
-                                justify-content-center counter-wrap
-                                ftco-animate">
+                            justify-content-center counter-wrap
+                            ftco-animate">
                             <div class="block-18 text-center">
                                 <div class="text">
-                                    <strong class="number" data-number="25">0</strong>
-                                    <span>Your Age</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 d-flex
-                                justify-content-center counter-wrap
-                                ftco-animate">
-                            <div class="block-18 text-center">
-                                <div class="text">
-                                    <strong class="number" data-number="100">0</strong>
+                                    <div style="display:flex;   align-items: center;
+                                ">
+                                        <strong class="number" data-number="100">0</strong>
+                                        <span style="margin-left:10%">Kgs</span>
+                                    </div>
                                     <span>Starting Weight</span>
                                 </div>
                             </div>
@@ -91,7 +86,7 @@
                                     <div style="display:flex;   align-items: center;
                                     ">
                                         <strong class="number" data-number="70">0</strong>
-                                        <span style="margin-left:4%">Kgs</span>
+                                        <span style="margin-left:10%">Kgs</span>
                                     </div>
                                     <span>Current Weight</span>
                                 </div>
@@ -114,27 +109,85 @@
     </section>
 
 
-
-
-
-
-    <footer class="ftco-footer ftco-section img">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row mb-5" style="display: flex;
-                    justify-content:center;">
-                <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
-                    <div class="ftco-footer-widget mb-4">
-                        <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
+    <div style="display:flex; ">
+        <section class="ftco-section bg-light">
+            <div class="row">
+                <div class="container-fluid">
+                    <div class="row justify-content-center mb-5">
+                        <div class="col-md-7 heading-section text-center ftco-animate">
+                            <h2 class="mb-1">Your PT:</h2>
+                        </div>
                     </div>
-                </div>
+                    <div class="row" style="display:flex; justify-content:center">
+                        <div class="col-lg-6 d-flex">
+                            <div class="coach align-items-stretch">
+                                <div class="img" style="background-image: url(images/trainer-1.jpg);"></div>
+                                <div class="text bg-white p-4 ftco-animate">
+                                    <h3><a href="#">Mark Brook</a></h3>
+                                    <p>Our fitness is important and something we should all enjoy. My aim is to create a positive and fun experience for clients, as well as using the best of my knowledge and experience to help clients achieve their goals.</p>
+                                    <ul class="ftco-social-media d-flex mt-4" style="display:flex; justify-content:center; ">
+                                        <li class="ftco-animate"><a href="https://twitter.com/?lang=pt_pt" class="mr-2 d-flex justify-content-center align-items-center"><span class="icon-twitter"></span></a></li>
+                                        <li class="ftco-animate"><a href="https://pt-pt.facebook.com/" class="mr-2 d-flex justify-content-center align-items-center"><span class="icon-facebook"></span></a></li>
+                                        <li class="ftco-animate"><a href="https://www.instagram.com/?hl=pt" class="mr-2 d-flex justify-content-center align-items-center"><span class="icon-instagram"></span></a></li>
+                                    </ul>
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        </section>
 
-    </footer>
+        <section class="ftco-section bg-light">
+            <div class="row">
+                <div class="container-fluid">
+                    <div class="row justify-content-center mb-5">
+                        <div class="col-md-7 heading-section text-center ftco-animate">
+                            <h2 class="mb-1">Your Gym:</h2>
+                        </div>
+                    </div>
+                    <div class="row" style="display:flex; justify-content:center">
+                        <div class="col-lg-6 d-flex">
+                            <div class="coach align-items-stretch">
+                                <div class="img" style="background-image: url(images/gym_premade.jpg);"></div>
+                                <div class="text bg-white p-4 ftco-animate">
+                                    <h3><a href="#">FitMAS</a></h3>
+                                    <p>Step into our spacious gym and you'll feel the difference. A buzz of energy and inspiration. A community unmatched amenities and some of the best studio classes. Come in and discover all you imagined and more.
+                                    </p>
+                                    <ul class="ftco-social-media d-flex mt-4" style="display:flex; justify-content:center; ">
+                                        <li class="ftco-animate"><a href="https://twitter.com/?lang=pt_pt" class="mr-2 d-flex justify-content-center align-items-center"><span class="icon-twitter"></span></a></li>
+                                        <li class="ftco-animate"><a href="https://pt-pt.facebook.com/" class="mr-2 d-flex justify-content-center align-items-center"><span class="icon-facebook"></span></a></li>
+                                        <li class="ftco-animate"><a href="https://www.instagram.com/?hl=pt" class="mr-2 d-flex justify-content-center align-items-center"><span class="icon-instagram"></span></a></li>
+                                    </ul>
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        </section>
+
+        </div>
 
 
 
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle
+
+
+        <footer class="ftco-footer ftco-section img">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row mb-5" style="display: flex;
+                    justify-content:center;">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                        <div class="ftco-footer-widget mb-4">
+                            <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
+                        </div>
+                    </div>
+
+        </footer>
+
+
+
+        <!-- loader -->
+        <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle
                             class="path-bg" cx="24" cy="24" r="22" fill="none"
                             stroke-width="4" stroke="#eeeeee" /><circle
                                 class="path" cx="24" cy="24" r="22" fill="none"
@@ -142,24 +195,24 @@
                                 stroke="#F96D00" /></svg></div>
 
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.min.js"></script>
-    <script src="js/scrollax.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery-migrate-3.0.1.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.easing.1.3.js"></script>
+        <script src="js/jquery.waypoints.min.js"></script>
+        <script src="js/jquery.stellar.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/aos.js"></script>
+        <script src="js/jquery.animateNumber.min.js"></script>
+        <script src="js/bootstrap-datepicker.js"></script>
+        <script src="js/jquery.timepicker.min.js"></script>
+        <script src="js/scrollax.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+        <script src="js/google-map.js"></script>
+        <script src="js/main.js"></script>
 
 </body>
 
-</html>
+</html
