--- a/athlete_progress.html
+++ b/athlete_progress.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/athlete_progress.js"></script>
+
+
 </head>
 
 <body>
@@ -59,7 +62,24 @@
         <div>
             <h1>Nao aparece o grafico, nao sei porque</h1>
             <h4>(verificar codigo JS localizado no ficheiro a parte)</h4>
-            <canvas id="lineChart" width="545" height="272" class="chartjs-render-monitor" style="display: block; width: 545px; height: 272px;"></canvas> </div>
+            <h4>LINE CHART (weight loss,etc..):</h4>
+            <canvas id="lineChart" width="545" height="272" class="chartjs-render-monitor" style="display: block; width: 545px; height: 272px;"></canvas>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h1>Nao aparece o grafico, nao sei porque</h1>
+            <h4>(verificar codigo JS localizado no ficheiro a parte)</h4>
+            <h4>Radar CHART (strength, stamina, etc...):</h4>
+            <canvas id="radarChart" width="545" height="272" class="chartjs-render-monitor" style="display: block; width: 545px; height: 272px;"></canvas>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h1>Mais charts: <a href="https://mdbootstrap.com/docs/jquery/javascript/charts/">https://mdbootstrap.com/docs/jquery/javascript/charts/</a></h1>
+        </div>
     </section>
 
     <footer class="ftco-footer ftco-section img">
@@ -87,7 +107,6 @@
 
 
 
-    <script src="js/athlete_progress.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -108,4 +127,4 @@
 
 </body>
 
-</html
+</html>
