--- a/login.html
+++ b/login.html
@@ -91,7 +91,7 @@
                             <span class="psw"><a href="create_user.html" >Create New Account</a></span>
                             <span class="psw"><a href="" >Login as Gym</a></span>
                             <span class="psw"><a href="" >Login as Personal Trainer</a></span>
-                            <span class="psw"><a href="" >Login as Athlete</a></span>
+                            <span class="psw"><a href="athlete_info.html" >Login as Athlete</a></span>
 
 
                         </div>
