--- a/Ginasiooriginal.html
+++ b/Ginasiooriginal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Muscle - Free Bootstrap 4 Template by Colorlib</title>
+    <title>CloudFit</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -230,7 +230,18 @@
                                     </div>
                                 </div>
     </section>
+ <footer class="ftco-footer ftco-section img">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row mb-5" style="display: flex;
+                    justify-content:center;">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                        <div class="ftco-footer-widget mb-4">
+                            <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
+                        </div>
+                    </div>
 
+        </footer>
 
     <!-- loader -->
 
