--- a/Ginasio.html
+++ b/Ginasio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Muscle - Free Bootstrap 4 Template by Colorlib</title>
+    <title>CloudFit/title>
     <meta charset="utf-8">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1, shrink-to-fit=no">
 
@@ -250,7 +250,18 @@
         </div>
     </section>
 
+ <footer class="ftco-footer ftco-section img">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row mb-5" style="display: flex;
+                    justify-content:center;">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                        <div class="ftco-footer-widget mb-4">
+                            <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
+                        </div>
+                    </div>
 
+        </footer>
     <!-- loader -->
 
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" widtd="48px" height="48px"><circle class="patd-bg" cx="24" cy="24" r="22" fill="none" stroke-widtd="4" stroke="#eeeeee"/><circle class="patd" cx="24" cy="24" r="22" fill="none" stroke-widtd="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
