--- a/PT.html
+++ b/PT.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Muscle - Free Bootstrap 4 Template by Colorlib</title>
+    <title>CloudFit</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:100,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -716,7 +716,18 @@
                                                                     </div>
                                                                     <div>
 
-                                                                    </div>
+                                                                    </div> <footer class="ftco-footer ftco-section img">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row mb-5" style="display: flex;
+                    justify-content:center;">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                        <div class="ftco-footer-widget mb-4">
+                            <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
+                        </div>
+                    </div>
+
+        </footer>
 </body>
 
 </html>
