--- a/athlete_chat.html
+++ b/athlete_chat.html
@@ -21,9 +21,15 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/athlete_progress.js"></script>
-
-
+    <style>
+        body {
+            background-color: rgb(0, 0, 0);
+        }
+        
+        .ftco-footer {
+            background-color: rgb(30, 34, 41);
+        }
+    </style>
 </head>
 
 <body>
@@ -37,8 +43,9 @@
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="athlete_info.html" class="nav-link">Info</a></li>
-                    <li class="nav-item active"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
-                    <li class="nav-item"><a href="athlete_plan.html" class="nav-link">Workout Plan</a></li>
+                    <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
+                    <li class="nav-item"><a href="atlete_plan.html" class="nav-link">Workout Plan</a></li>
+                    <li class="nav-item active"><a href="atlete_plan.html" class="nav-link">Chat</a></li>
                     <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
                 </ul>
             </div>
@@ -46,52 +53,19 @@
     </nav>
     <!-- END nav -->
 
-    <section class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
-                <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-3 bread">Progress</h1>
-                    <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> </p>
+
+
+    <div class="container-fluid">
+        <div class="row mb-2" style="display: flex;
+                    justify-content:center;">
+            <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                <div class="ftco-footer-widget mb-4">
+                    <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section>
-        <div>
-            <h1>graph not shwon</h1>
-            <h4>LINE CHART (weight loss,etc..):</h4>
-            <canvas id="lineChart" width="545" height="272" class="chartjs-render-monitor" style="display: block; width: 545px; height: 272px;"></canvas>
-        </div>
-    </section>
-
-    <section>
-        <div>
-            <h1>graph not shwon</h1>
-            <h4>Radar CHART (strength, stamina, etc...):</h4>
-            <canvas id="radarChart" width="545" height="272" class="chartjs-render-monitor" style="display: block; width: 545px; height: 272px;"></canvas>
-        </div>
-    </section>
-
-    <section>
-        <div>
-            <h1>Mais charts: <a href="https://mdbootstrap.com/docs/jquery/javascript/charts/">https://mdbootstrap.com/docs/jquery/javascript/charts/</a></h1>
-        </div>
-    </section>
-
-    <footer class="ftco-footer ftco-section img">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row mb-5" style="display: flex;
-                    justify-content:center;">
-                <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
-                    <div class="ftco-footer-widget mb-4">
-                        <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
-                    </div>
-                </div>
-
-    </footer>
 
 
 
@@ -102,7 +76,6 @@
                                 class="path" cx="24" cy="24" r="22" fill="none"
                                 stroke-width="4" stroke-miterlimit="10"
                                 stroke="#F96D00" /></svg></div>
-
 
 
     <script src="js/jquery.min.js"></script>
@@ -122,7 +95,17 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+    <script>
+        $(document).ready(function() {
+            var data = JSON.parse(window.localStorage.getItem("Data"));
+            var plano = data.PlanoTreinoAtual
+            console.log(plano)
+            for (var i = 0; i < plano.length; i++) {
+                $("#row" + (i + 1)).text(plano[i]);
+            }
+        });
+    </script>
 
 </body>
 
-</html>
+</html
