--- a/athlete_plan.html
+++ b/athlete_plan.html
@@ -45,7 +45,8 @@
                     <li class="nav-item"><a href="athlete_info.html" class="nav-link">Info</a></li>
                     <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
                     <li class="nav-item active"><a href="atlete_plan.html" class="nav-link">Workout Plan</a></li>
-                    <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>                    <li class="nav-item"><a href="atlete_plan.html" class="nav-link">Chat</a></li>
+
                 </ul>
             </div>
         </div>
