--- a/CreateUser.html
+++ b/CreateUser.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>CloudFit</title>
+    <title>Muscle - Free Bootstrap 4 Template by Colorlib</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -313,6 +313,7 @@
                                     "2": [],
                                     "3": []
                                 },
+                                "mensagens":[],
                                 "Pt": personalTrainers[window.localStorage.getItem("numAtribuicao")]
                             }
                             window.localStorage.setItem("user" + window.localStorage.getItem("NumUsers"), JSON.stringify(user));
