--- a/athlete_progress.html
+++ b/athlete_progress.html
@@ -36,10 +36,11 @@
                 </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="athlete_info.html" class="nav-link">Info</a></li>
-                    <li class="nav-item active"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
-                    <li class="nav-item"><a href="athlete_plan.html" class="nav-link">Workout Plan</a></li>
-                    <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+                        <li class="nav-item active"><a href="athlete_info.html" class="nav-link">Info</a></li>
+                        <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
+                        <li class="nav-item"><a href="athlete_plan.html" class="nav-link">Workout Plan</a></li>
+                        <li class="nav-item"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -60,7 +61,8 @@
 
     <section>
         <div>
-            <h1>graph not shwon</h1>
+            <h1>Nao aparece o grafico, nao sei porque</h1>
+            <h4>(verificar codigo JS localizado no ficheiro a parte)</h4>
             <h4>LINE CHART (weight loss,etc..):</h4>
             <canvas id="lineChart" width="545" height="272" class="chartjs-render-monitor" style="display: block; width: 545px; height: 272px;"></canvas>
         </div>
@@ -68,7 +70,8 @@
 
     <section>
         <div>
-            <h1>graph not shwon</h1>
+            <h1>Nao aparece o grafico, nao sei porque</h1>
+            <h4>(verificar codigo JS localizado no ficheiro a parte)</h4>
             <h4>Radar CHART (strength, stamina, etc...):</h4>
             <canvas id="radarChart" width="545" height="272" class="chartjs-render-monitor" style="display: block; width: 545px; height: 272px;"></canvas>
         </div>
