--- a/athlete_info.html
+++ b/athlete_info.html
@@ -36,6 +36,7 @@
                     <li class="nav-item active"><a href="athlete_info.html" class="nav-link">Info</a></li>
                     <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
                     <li class="nav-item"><a href="athlete_plan.html" class="nav-link">Workout Plan</a></li>
+                    <li class="nav-item"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
                     <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
                 </ul>
             </div>
