--- a/Ginasio.html
+++ b/Ginasio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Muscle - Free Bootstrap 4 Template by Colorlib</title>
+    <title>CloudFit/title>
     <meta charset="utf-8">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1, shrink-to-fit=no">
 
@@ -61,15 +61,205 @@
             </div>
         </div>
     </section>
-
-
-
+     
     <section>
-        <div class="container atletas">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3"><strong>Personal Trainers:</strong></div>
+                <div class="col-md-3">
+                    <table>
+                        <tr>
+                            <td><strong>Athletes:</strong></td>
+                        </tr>
+
+
+                    </table>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-3 PT0">(Personal Trainer doesn't exist) </div>
+                <div class="col-md-3">
+                    <table>
+                        <tr>
+                            <td class="PT0U0">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT0U1">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT0U2">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT0U3">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT0U4">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT0U5">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                        </tr>
+
+                    </table>
+                </div>
+            </div><br>
+
+            <div class="row">
+                <div class="col-md-3 PT1">(Personal Trainer doesn't exist) </div>
+                <div class="col-md-3">
+                    <table>
+                        <tr>
+                            <td class="PT1U0">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT1U1">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT1U2">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT1U3">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT1U4">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT1U5">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                        </tr>
+
+                    </table>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-3 PT2">(Personal Trainer doesn't exist) </div>
+                <div class="col-md-3">
+                    <table>
+                        <tr>
+                            <td class="PT2U0">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT2U1">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT2U2">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT2U3">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT2U4">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT2U5">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                        </tr>
+
+                    </table>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-3 PT3">(Personal Trainer doesn't exist) </div>
+                <div class="col-md-3">
+                    <table>
+                        <tr>
+                            <td class="PT3U0">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT3U1">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT3U2">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT3U3">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT3U4">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT3U5">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                        </tr>
+
+                    </table>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-3 PT4">(Personal Trainer doesn't exist) </div>
+                <div class="col-md-3">
+                    <table>
+                        <tr>
+                            <td class="PT4U0">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT4U1">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT4U2">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT4U3">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT4U4">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT4U5">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                        </tr>
+
+                    </table>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-3 PT5">(Personal Trainer doesn't exist) </div>
+                <div class="col-md-3">
+                    <table>
+                        <tr>
+                            <td class="PT5U0">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT5U1">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT5U2">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT5U3">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT5U4">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                            <td class="PT5U5">(Athlete doesn't exist)</td>
+                        </tr>
+                        <tr>
+                        </tr>
+
+                    </table>
+                </div>
+            </div>
         </div>
     </section>
 
+ <footer class="ftco-footer ftco-section img">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row mb-5" style="display: flex;
+                    justify-content:center;">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                        <div class="ftco-footer-widget mb-4">
+                            <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
+                        </div>
+                    </div>
 
+        </footer>
     <!-- loader -->
 
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" widtd="48px" height="48px"><circle class="patd-bg" cx="24" cy="24" r="22" fill="none" stroke-widtd="4" stroke="#eeeeee"/><circle class="patd" cx="24" cy="24" r="22" fill="none" stroke-widtd="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
@@ -80,15 +270,12 @@
             var data = JSON.parse(window.localStorage.getItem("Data"));
             PerTra = data.Pts;
             console.log(PerTra)
-            for (var a = 0; a < PerTra.length; a++) {
-                console.log("a")
-                $(".atletas").append('<div class="row"><div class="col-md-3"><strong>Personal Trainerer:'+JSON.parse(window.localStorage.getItem(PerTra[a])).Name+'</strong></div><div class="col-md-3"><table '+"class=table"+a+'><tr><td><strong>Athletes:</strong></td></tr></table></div></div><br>');
-                /*<div class="container"><div class="row"><div class="col-md-3"><strong>Personal Trainers:</strong></div><div class="col-md-3"><table><tr><td><strong>Athletes:</strong></td></tr></table></div></div><br></div>*/
+            for (var a = 0; a < PerTra.lengtd; a++) {
+                $(".PT" + a).text(JSON.parse(window.localStorage.getItem(PerTra[a])).Name)
                 var AtletaPT = JSON.parse(window.localStorage.getItem(PerTra[a])).Atletas;
                 console.log(AtletaPT)
-                for (var b = 0; b < AtletaPT.length; b++) {
-                    console.log("aaa")
-                    $(".table"+a).append("<tr><td>"+JSON.parse(window.localStorage.getItem(AtletaPT[b])).Name+"</td></tr>")
+                for (var b = 0; b < AtletaPT.lengtd; b++) {
+                    $(".PT" + a + "U" + b).text(JSON.parse(window.localStorage.getItem(AtletaPT[b])).Name)
                 }
             }
         })
